samples/_failures_safe/1761284726_8164f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89aed376.c: In function ‘main’:
./samples/SAFE/__tmp_89aed376.c:151:5: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  151 |     mat
      |     ^~~
      |     mat2
./samples/SAFE/__tmp_89aed376.c:151:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_89aed376.c:151:8: error: expected ‘;’ at end of input
  151 |     mat
      |        ^
      |        ;
./samples/SAFE/__tmp_89aed376.c:151:5: error: expected declaration or statement at end of input
  151 |     mat
      |     ^~~
